# jig

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh  jig.toml  test-auto-spawn-proof.txt
.claude/: settings.json
.coord/: PROTOCOL.md  (+1 more)
crates/jig-cli/: CHANGELOG.md  Cargo.toml
crates/jig-cli/src/: cli.rs  main.rs  op.rs  ui.rs
crates/jig-cli/src/cli/: mod.rs  op.rs  ui.rs
crates/jig-cli/src/cli/commands/: attach.rs  commit.rs  config.rs  create.rs  daemon.rs  exit.rs  health.rs  home.rs  hooks.rs  init.rs  issues.rs  kill.rs  list.rs  merge.rs  mod.rs  notify.rs  nuke.rs  open.rs  pr.rs  ps.rs  remove.rs  repos.rs  resume.rs  review.rs  shell_init.rs  shell_setup.rs  spawn.rs  update.rs  version.rs  which.rs
crates/jig-cli/src/commands/: attach.rs  commit.rs  config.rs  create.rs  daemon.rs  exit.rs  health.rs  home.rs  hooks.rs  init.rs  issues.rs  kill.rs  list.rs  merge.rs  mod.rs  notify.rs  nuke.rs  open.rs  pr.rs  ps.rs  remove.rs  repos.rs  resume.rs  review.rs  shell_init.rs  shell_setup.rs  spawn.rs  status.rs  tui.rs  update.rs  version.rs  which.rs
crates/jig-cli/src/commands/review/: respond.rs  submit.rs
crates/jig-cli/src/config/: global.rs  hooks.rs  mod.rs  paths.rs  registry.rs  repo.rs
crates/jig-cli/src/context/: config.rs  log.rs  mod.rs  paths.rs  registry.rs  repo.rs
crates/jig-cli/src/daemon/: discovery.rs  display.rs  github_actor.rs  issue_actor.rs  messages.rs  mod.rs  nudge_actor.rs  pr.rs  prune_actor.rs  recovery.rs  review_actor.rs  runtime.rs  spawn_actor.rs  triage_actor.rs
crates/jig-cli/src/daemon/actors/: actor.rs  dispatch.rs  mod.rs  monitor.rs  prune.rs  spawn.rs  sync.rs  triage.rs
crates/jig-cli/src/daemon/dispatch/: actions.rs  rules.rs
crates/jig-cli/src/daemon/events/: mod.rs  reducer.rs  schema.rs
crates/jig-cli/src/hooks/: git.rs  handlers.rs  install.rs  mod.rs  registry.rs  uninstall.rs
crates/jig-cli/src/notify/: events.rs  hook.rs  queue.rs
crates/jig-cli/src/terminal/: emulator.rs  mod.rs
crates/jig-cli/src/worker/: checks.rs  mod.rs  state.rs  status.rs
crates/jig-cli/src/worker/events/: derive.rs  log.rs  mod.rs  reducer.rs  schema.rs
crates/jig-cli/tests/: attach_tests.rs  commit_validate.rs  issue_lifecycle.rs  manual_child_path.rs  notify_tests.rs  review_integration.rs  review_submit_respond.rs
crates/jig-core/: CHANGELOG.md  Cargo.toml
crates/jig-core/src/: adapter.rs  commits.rs  config.rs  context.rs  daemon.rs  error.rs  events.rs  git.rs  lib.rs  nudge.rs  prompt.rs  registry.rs  review.rs  session.rs  spawn.rs  state.rs  terminal.rs  tmux.rs  worker.rs  worktree.rs
crates/jig-core/src/agents/: claude.rs  mod.rs
crates/jig-core/src/agents/claude/: hooks.rs  mod.rs
crates/jig-core/src/agents/claude/agent_scripts/: PostToolUse.sh
crates/jig-core/src/config/: global.rs  hooks.rs  mod.rs  paths.rs  registry.rs  repo.rs  state.rs
crates/jig-core/src/daemon/: discovery.rs  github_actor.rs  issue_actor.rs  lifecycle.rs  messages.rs  mod.rs  nudge_actor.rs  pr.rs  prune_actor.rs  recovery.rs  review_actor.rs  runtime.rs  spawn_actor.rs  sync_actor.rs  triage_actor.rs  triage_tracker.rs
crates/jig-core/src/dispatch/: actions.rs  mod.rs  rules.rs
crates/jig-core/src/events/: derive.rs  log.rs  mod.rs  reducer.rs  schema.rs
crates/jig-core/src/git/: branch.rs  diff.rs  error.rs  mod.rs  repo.rs  worktree.rs
crates/jig-core/src/git/commit/: mod.rs  oid.rs
crates/jig-core/src/git/commit/conventional/: message.rs  mod.rs  validation.rs
crates/jig-core/src/github/: client.rs  detect.rs  error.rs  health.rs  mod.rs  types.rs
crates/jig-core/src/github/queries/: check_runs.rs  conflicts.rs  mod.rs  pr_commits.rs  pr_for_branch.rs  pr_state.rs  review_activity.rs  reviews.rs
crates/jig-core/src/global/: config.rs  mod.rs  paths.rs  state.rs
crates/jig-core/src/health/: detector.rs  mod.rs  state.rs  tmux.rs
crates/jig-core/src/hooks/: claude.rs  git.rs  handlers.rs  install.rs  mod.rs  registry.rs  templates.rs  uninstall.rs
crates/jig-core/src/hooks/agent_scripts/: Notification.sh  Stop.sh
crates/jig-core/src/hooks/templates/: Notification.sh  PostToolUse.sh  Stop.sh
crates/jig-core/src/host/: mod.rs  tmux.rs
crates/jig-core/src/host/terminal/: emulator.rs
crates/jig-core/src/issues/: file_provider.rs  issue.rs  linear_client.rs  linear_provider.rs  mod.rs  naming.rs  provider.rs  types.rs
crates/jig-core/src/issues/providers/: mod.rs
crates/jig-core/src/issues/providers/linear/: mod.rs  provider.rs
crates/jig-core/src/mux/: mod.rs  tmux.rs
crates/jig-core/src/mux/terminal/: emulator.rs  mod.rs
crates/jig-core/src/notify/: events.rs  hook.rs  mod.rs  queue.rs
crates/jig-core/src/templates/: builtin.rs  engine.rs  mod.rs
crates/jig-core/src/worker/: mod.rs  status.rs
crates/jig-core/src/worker/events/: derive.rs  log.rs  mod.rs  reducer.rs  schema.rs
crates/jig-daemon/: Cargo.toml
crates/jig-daemon/src/: config.rs  display.rs  lib.rs  lifecycle.rs  recovery.rs  runtime.rs  triage_tracker.rs
crates/jig-daemon/src/actors/: actor.rs  github.rs  issue.rs  mod.rs  nudge.rs  prune.rs  review.rs  spawn.rs  sync.rs  triage.rs
crates/jig-daemon/src/dispatch/: mod.rs
crates/jig-tui/: Cargo.toml
crates/jig-tui/src/: app.rs  main.rs
crates/wt-tui/: Cargo.toml
crates/wt-tui/src/: main.rs
(+230 files in other folders)
