[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "1.8.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/amiller68/jig"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "3"
comfy-table = "7"

# Async
tokio = { version = "1", features = ["full"] }

# Utilities
dirs = "6"
glob = "0.3"
sha2 = "0.10"
which = "8"
handlebars = "6"
urlencoding = "2"
regex = "1"
ureq = { version = "3", features = ["json"] }
crossterm = "0.29"
nix = { version = "0.31", features = ["process"] }
ctrlc = { version = "3", features = ["termination"] }
flume = "0.12"
git2 = "0.20"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Internal crates
jig-core = { path = "crates/jig-core" }
jig-cli = { path = "crates/jig-cli" }
