[package]
name = "jig-daemon"
description = "Daemon for jig - background orchestration of workers, issues, and PRs"
version = "1.12.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
ctrlc.workspace = true
flume.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile.workspace = true
